// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/app/js/entry/entry-actions/entry-actions.spec.js should render expand-less and check icon buttons 1`] = `
Array [
  <IconButton
    onClick={[MockFunction]}
    type="expand-less"
  />,
  <IconButton
    onClick={[MockFunction]}
    type="check"
  />,
]
`;

exports[`src/app/js/entry/entry-actions/entry-actions.spec.js should render expand-more and check-circle icon buttons 1`] = `
Array [
  <IconButton
    onClick={[MockFunction]}
    type="expand-more"
  />,
  <IconButton
    onClick={[MockFunction]}
    type="check-circle"
  />,
]
`;
